--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "main"       : "dist/index.js",
   "repository" : "https://github.com/corbane/monaco-cdn-loader",
   "author"     : "jmv <kitjmv@gmail.com>",
-  "license"    : "LGPL-3.0"
+  "license"    : "LGPL-3.0",
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "monaco-0.27.0.d.ts"
+  ]
 }
