--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,14 @@
     "compilerOptions": {
         "module"  : "ES2020",
         "allowJs" : true,
-        
         "noImplicitThis"     : true,
         "noImplicitOverride" : true,
         
-        "target"     : "ES2020",
-        "outDir"     : ".",
-        "sourceMap"  : true,
-        "declaration": true,
-        "declarationMap": true
+        "target"         : "ES2020",
+        "outDir"         : ".",
+        "removeComments" : true,
+        "sourceMap"      : true,
+        "declaration"    : true,
+        "declarationMap" : true
     }
 }
