--- a/core/package.json
+++ b/core/package.json
@@ -3,6 +3,7 @@
   "version"    : "2.1.0",
   "description": "Utility to load Monaco editor without module dependencies via CDN.",
   "main"       : "dist/index.js",
+  "types"      : "dist/index.d.ts",
   "repository" : "https://github.com/corbane/monaco-cdn-loader",
   "author"     : "jmv <kitjmv@gmail.com>",
   "license"    : "LGPL-3.0",
