--- a/core/package.json
+++ b/core/package.json
@@ -1,15 +1,6 @@
 {
-  "name"       : "monaco-cdn-loader",
-  "version"    : "2.1.0",
-  "description": "Utility to load Monaco editor without module dependencies via CDN.",
-  "main"       : "dist/index.js",
-  "types"      : "dist/index.d.ts",
-  "repository" : "https://github.com/corbane/monaco-cdn-loader",
-  "author"     : "jmv <kitjmv@gmail.com>",
-  "license"    : "LGPL-3.0",
-  "files": [
-    "index.js",
-    "index.d.ts",
-    "monaco-0.27.0.d.ts"
-  ]
+  "devDependencies": {
+    "rollup": "^2.57.0",
+    "typescript": "^4.4.3"
+  }
 }
