--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "files": [
-        "src/index.ts"
+        "index.ts"
     ],
     "compilerOptions": {
         "module"  : "ES2020",
@@ -9,7 +9,8 @@
         "noImplicitOverride" : true,
         
         "target"         : "ES2020",
-        "outDir"         : ".",
+        "outDir"         : ".out",
+        "declarationDir" : "../dist",
         "removeComments" : true,
         "sourceMap"      : true,
         "declaration"    : true,
