--- a/demos/simple/package.json
+++ b/demos/simple/package.json
@@ -3,6 +3,10 @@
     "monaco-cdn-loader": "github:corbane/monaco-cdn-loader#2.1.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "rollup": "^2.57.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   }
 }
