--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "monaco-cdn-loader",
   "version": "2.1.0",
   "description": "Utility to load Monaco editor without module dependencies via CDN.",
-  "main": "out/index.js",
-  "types": "out/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/corbane/monaco-cdn-loader",
   "author": "jmv <kitjmv@gmail.com>",
   "license": "LGPL-3.0",
