--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -1,19 +1,13 @@
 {
-    "files": [
-        "index.ts"
+    "include": [
+        "*.ts"
     ],
     "compilerOptions": {
-        "module"  : "ES2020",
         "allowJs" : true,
         "noImplicitThis"     : true,
         "noImplicitOverride" : true,
-        
-        "target"         : "ES2020",
-        "outDir"         : ".out",
-        "declarationDir" : "../dist",
-        "removeComments" : true,
-        "sourceMap"      : true,
-        "declaration"    : true,
-        "declarationMap" : true
+
+        "target": "ES2020",
+        "module": "ES2020"
     }
 }
