--- a/demos/default/tsconfig.json
+++ b/demos/default/tsconfig.json
@@ -7,6 +7,7 @@
         "allowJs"            : true,
         "noImplicitThis"     : true,
         "noImplicitOverride" : true,
+        "esModuleInterop"    : true,
         
         "target"         : "ES2020",
         "module"         : "ES2020",
