--- a/demos/simple/package.json
+++ b/demos/simple/package.json
@@ -1,12 +1,12 @@
 {
-  "dependencies": {
-    "monaco-cdn-loader": "github:corbane/monaco-cdn-loader#2.1.0"
-  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-typescript": "^8.2.5",
     "rollup": "^2.57.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "monaco-cdn-loader": "https://github.com/corbane/monaco-cdn-loader/releases/download/2.1.0/monaco-cdn-loader-2.1.0.tgz"
   }
 }
