--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "files.exclude": {
+        ".gitignore": false,
         "**/.git": false,
         "**/.out": false,
-        "**/node_modules": false
+        "**/node_modules": false,
+        "dist": false,
+        "demos/**/*.js": false,
+        "demos/**/*.js.map": false
     }
 }
